disable eslint prop validation for now

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,3 +24,6 @@ rules:
 
   # disable this temporarily (2018-05-12)
   react/prefer-stateless-function: false
+
+  # disable prop validation for now
+  react/prop-types: 0
